#Nmap Changelog ($Id$); -*-text-*-

o [Ncat][GH#1139] Ncat now selects the correct default port for a given proxy
  type. [Pavel Zhukov]

o [NSE] memcached-info can now gather information from the UDP memcached
  service in addition to the TCP service. The UDP service is frequently used as
  a DDoS reflector and amplifier. [Daniel Miller]

o [NSE][GH#1129] Changed url.absolute() behavior with respect to dot and
  dot-dot path segments to comply with RFC 3986, section 5.2. [nnposter]

o Removed deprecated and undocumented aliases for several long options that
  used underscores instead of hyphens, such as --max_retries. [Daniel Miller]

o When a soft match occurs, any probes that could result in a match with the
  same service will be sent regardless of rarity, improving the chances of
  matching unusual services on non-standard ports. [Daniel Miller]

o --version-all now turns off the soft match optimization, ensuring that all
  probes really are sent, even if there aren't any existing match lines for the
  softmatched service. [Daniel Miller]

o Increased effectiveness of service scan soft matches. Previously, all probes
  which matched the port being scanned would be sent regardless of whether the
  service was soft matched; softmatch lines only restricted non-port-matching
  probes from being sent. Now, a soft match will cause ALL non-service-matching
  probes to be skipped, even if the port number matches. [Daniel Miller]

o [GH#1112] Resolved crash opportunities caused by unexpected libpcap version
  string format. [Gisle Vanem, nnposter]

o [NSE][GH#1083] New set of Telnet softmatches for version detection based on
  Telnet DO/DON'T options offered, covering a wide variety of devices and
  operating systems. [D Roberson]

o [NSE][GH#1090] Fix false positives in rexec-brute by checking responses for
  indications of login failure. [Daniel Miller]

o [NSE][GH#1099] Fix http-fetch to keep downloaded files in separate
  destination directories. [Aniket Pandey]
