@@ -1,5 +1,8 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#1114] Update bitcoin-getaddr to receive more than one response
+  message, since the first message usually only has one address in it. [h43z]
+
 o [Ncat][GH#1139] Ncat now selects the correct default port for a given proxy
   type. [Pavel Zhukov]
 
